--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </nav>
     <section class="section">
       <div class="container">
-        <h1 class="title">Hello World</h1>
+        <h1 class="title">Hi! And welcome to my channel!</h1>
         <p class="subtitle">My first website with <strong>Bulma</strong>!</p>
         <p><i class="fa-regular fa-user"></i></p>
         <p><i class="fa-solid fa-user"></i></p>
