Add some styles

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
+    <div class="wrapper">
     <nav
       id="top-navbar"
       class="navbar is-fixed-top"
@@ -137,6 +138,20 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="content is-size-7 has-text-centered has-text-weight-normal">
+        <a href="https://wikiliq.org/us-privacy-policy/">Privacy Policy</a> |
+        <a href="https://wikiliq.org/terms-us/">Terms of Service</a>
+        <span
+          ><a href="https://wikiliq.org"
+            ><span class="has-text-white">Wiki</span
+            ><span class="has-text-danger">liQ</span></a
+          ></span
+        >
+        <span> | All Rights Reserved 2023</span>
+      </div>
+    </footer>
+    <!-- Scripts -->
     <script src="js/scripts.js"></script>
   </body>
 </html>
