--- a/index.html
+++ b/index.html
@@ -76,9 +76,17 @@
               ><span class="tag is-danger is-rounded">3</span>
             </a>
             <div class="navbar-dropdown">
-              <a class="navbar-item">1. Change your password </a>
-              <a class="navbar-item">2. Add payment method </a>
-              <a class="navbar-item">3. Confirm e-mail </a>
+              <a class="navbar-item"
+                >1. Change your password &nbsp;<span
+                  class="tag is-delete"
+                ></span
+              ></a>
+              <a class="navbar-item"
+                >2. Add payment method &nbsp;<span class="tag is-delete"></span
+              ></a>
+              <a class="navbar-item"
+                >3. Confirm e-mail &nbsp;<span class="tag is-delete"></span
+              ></a>
               <hr class="navbar-divider" />
               <a class="navbar-item">Read all notices</a>
             </div>
@@ -171,23 +179,76 @@
               <span>Ads</span>
             </a>
           </li>
+          <li>
+            <a>
+              <span class="icon is-small"
+                ><i class="fa-solid fa-chart-line"></i
+              ></span>
+              <span>Stats & reports</span>
+            </a>
+          </li>
+          <li>
+            <a>
+              <span class="icon is-small"
+                ><i class="fa-solid fa-dollar-sign"></i
+              ></span>
+              <span>Finance</span>
+            </a>
+          </li>
         </ul>
       </div>
       <div id="tab-content" class="tab-content">
         <div id="tab-0" class="tab-content-box is-active">
           <h2>Кампании</h2>
           <p>Содержимое для вкладки "Кампании" здесь.</p>
+          <button class="button">
+            <span class="icon">
+              <i class="fa-solid fa-plus"></i>
+            </span>
+            <span>Add new campaign</span>
+          </button>
         </div>
         <div id="tab-1" class="tab-content-box">
           <h2>Группы объявлений</h2>
           <p>Содержимое для вкладки "Группы объявлений" здесь.</p>
+          <button class="button">
+            <span class="icon">
+              <i class="fa-solid fa-plus"></i>
+            </span>
+            <span>Add new advertisment set</span>
+          </button>
         </div>
         <div id="tab-2" class="tab-content-box">
           <h2>Объявления</h2>
           <p>Содержимое для вкладки "Объявления" здесь.</p>
+          <button class="button">
+            <span class="icon">
+              <i class="fa-solid fa-plus"></i>
+            </span>
+            <span>Add new advertisment item</span>
+          </button>
+        </div>
+        <div id="tab-3" class="tab-content-box">
+          <h2>Статистика</h2>
+          <p>Содержимое для вкладки "Объявления" здесь.</p>
+        </div>
+        <div id="tab-4" class="tab-content-box">
+          <h2>Finance</h2>
+          <p>Содержимое для вкладки "Объявления" здесь.</p>
         </div>
       </div>
     </section>
+    <div class="notification-area">
+      <div class="notification is-success is-light">
+        <button class="delete"></button>
+        <strong
+          >Welcome to our advertising WikiLiq Ads Manager platform!</strong
+        >
+        <br />
+        We're excited to have you on board. Get ready to reach your target
+        audience and grow your business with us!
+      </div>
+    </div>
     <footer class="footer">
       <div class="content is-size-7 has-text-centered has-text-weight-normal">
         <a href="https://wikiliq.org/us-privacy-policy/">Privacy Policy</a> |
