--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ads Manager: Encyclopedia of Liquor Brands</title>
     <link rel="stylesheet" href="css/styles.min.css" />
     <link rel="stylesheet" href="css/fonts.min.css" />
+    <link rel="stylesheet" href="css/animate.min.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -198,7 +199,10 @@
         </ul>
       </div>
       <div id="tab-content" class="tab-content">
-        <div id="tab-0" class="tab-content-box is-active">
+        <div
+          id="tab-0"
+          class="tab-content-box is-active animate__animated animate__fadeIn"
+        >
           <h2>Кампании</h2>
           <p>Содержимое для вкладки "Кампании" здесь.</p>
           <button class="button">
@@ -208,7 +212,10 @@
             <span>Add new campaign</span>
           </button>
         </div>
-        <div id="tab-1" class="tab-content-box">
+        <div
+          id="tab-1"
+          class="tab-content-box animate__animated animate__fadeIn"
+        >
           <h2>Группы объявлений</h2>
           <p>Содержимое для вкладки "Группы объявлений" здесь.</p>
           <button class="button">
@@ -218,7 +225,10 @@
             <span>Add new advertisment set</span>
           </button>
         </div>
-        <div id="tab-2" class="tab-content-box">
+        <div
+          id="tab-2"
+          class="tab-content-box animate__animated animate__fadeIn"
+        >
           <h2>Объявления</h2>
           <p>Содержимое для вкладки "Объявления" здесь.</p>
           <button class="button">
@@ -228,18 +238,26 @@
             <span>Add new advertisment item</span>
           </button>
         </div>
-        <div id="tab-3" class="tab-content-box">
+        <div
+          id="tab-3"
+          class="tab-content-box animate__animated animate__fadeIn"
+        >
           <h2>Статистика</h2>
           <p>Содержимое для вкладки "Объявления" здесь.</p>
         </div>
-        <div id="tab-4" class="tab-content-box">
+        <div
+          id="tab-4"
+          class="tab-content-box animate__animated animate__fadeIn"
+        >
           <h2>Finance</h2>
           <p>Содержимое для вкладки "Объявления" здесь.</p>
         </div>
       </div>
     </section>
     <div class="notification-area">
-      <div class="notification is-success is-light">
+      <div
+        class="notification is-success is-light animate__animated animate__slideInUp"
+      >
         <button class="delete"></button>
         <strong
           >Welcome to our advertising WikiLiq Ads Manager platform!</strong
