--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       aria-label="main navigation"
     >
       <div class="navbar-brand">
-        <a class="navbar-item" href="/">
+        <a class="navbar-item" href="#">
           <span class="has-text-weight-semibold is-size-5">
             <span class="has-text-black">Wiki</span
             ><span class="has-text-danger">liQ</span></span
