--- a/index.html
+++ b/index.html
@@ -263,7 +263,10 @@
                   <td>77.7%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -300,7 +303,10 @@
                   <td>66.6%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -337,7 +343,10 @@
                   <td>50%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -413,7 +422,10 @@
                   <td>77.7%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -453,7 +465,10 @@
                   <td>77.7%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -491,7 +506,10 @@
                   <td>66.6%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -529,7 +547,10 @@
                   <td>66.6%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -567,7 +588,10 @@
                   <td>50%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -605,7 +629,10 @@
                   <td>50%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -683,7 +710,10 @@
                   <td>77.7%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -724,7 +754,10 @@
                   <td>77.7%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -765,7 +798,10 @@
                   <td>77.7%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -806,7 +842,10 @@
                   <td>77.7%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -845,7 +884,10 @@
                   <td>66.6%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -884,7 +926,10 @@
                   <td>66.6%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -923,7 +968,10 @@
                   <td>66.6%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -962,7 +1010,10 @@
                   <td>66.6%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -1001,7 +1052,10 @@
                   <td>50%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -1040,7 +1094,10 @@
                   <td>50%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -1079,7 +1136,10 @@
                   <td>50%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -1118,7 +1178,10 @@
                   <td>50%</td>
                   <td>
                     <div class="buttons has-addons">
-                      <div class="button is-small is-info is-light">
+                      <div
+                        class="button is-small is-info is-light modal-button"
+                        data-target="settings-modal"
+                      >
                         <span class="icon is-small"
                           ><i class="fa-solid fa-gear"></i
                         ></span>
@@ -1161,8 +1224,7 @@
           id="tab-4"
           class="tab-content-box animate__animated animate__fadeIn"
         >
-          <h2>Finance</h2>
-          <p>Содержимое для вкладки "Объявления" здесь.</p>
+          <h2>Some financial staff...</h2>
         </div>
       </div>
     </section>
@@ -1198,6 +1260,37 @@
       </div>
     </footer>
     <!-- Modals -->
+    <!-- Add new campaign modal with fx class "modal-fx-fadeInScale" -->
+    <div id="settings-modal" class="modal modal-fx-fadeInScale">
+      <div class="modal-background"></div>
+      <div class="modal-content modal-card">
+        <header class="modal-card-head">
+          <p class="modal-card-title">Settings</p>
+          <button class="modal-button-close delete" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae cum
+          enim quisquam ducimus, facilis, esse nesciunt porro, officiis totam
+          veniam libero! Nisi hic vel aspernatur doloremque enim ut blanditiis
+          perferendis, repudiandae assumenda quibusdam delectus quam eum non
+          maxime ullam quod qui ab in dolorem dolores vero amet! Perferendis
+          incidunt unde blanditiis harum vel velit, accusantium praesentium
+          autem ut voluptas, voluptatibus fugiat. Molestiae maiores aspernatur
+          expedita, magnam commodi suscipit explicabo labore temporibus tenetur
+          distinctio mollitia facere eum ad officia? Sit eaque culpa ea saepe
+          facilis. Consequatur, architecto. Optio eveniet cupiditate accusantium
+          vero consectetur, maiores eum culpa assumenda reprehenderit sequi aut
+          nihil!
+        </section>
+        <footer class="modal-card-foot">
+          <button class="modal-button-close button is-success">
+            Save changes
+          </button>
+          <button class="modal-button-close button">Cancel</button>
+        </footer>
+      </div>
+      <button class="modal-close is-large" aria-label="close"></button>
+    </div>
     <!-- Add new campaign modal with fx class "modal-fx-fadeInScale" -->
     <div
       id="add-campaign-modal"
