--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                   <td>28</td>
                   <td>77.7%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
