Fix btns groups

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                   <td>10</td>
                   <td>66.6%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -342,7 +342,7 @@
                   <td>22</td>
                   <td>50%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -421,7 +421,7 @@
                   <td>28</td>
                   <td>77.7%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -464,7 +464,7 @@
                   <td>28</td>
                   <td>77.7%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -505,7 +505,7 @@
                   <td>10</td>
                   <td>66.6%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -546,7 +546,7 @@
                   <td>10</td>
                   <td>66.6%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -587,7 +587,7 @@
                   <td>22</td>
                   <td>50%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -628,7 +628,7 @@
                   <td>22</td>
                   <td>50%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -709,7 +709,7 @@
                   <td>28</td>
                   <td>77.7%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -753,7 +753,7 @@
                   <td>28</td>
                   <td>77.7%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -797,7 +797,7 @@
                   <td>28</td>
                   <td>77.7%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -841,7 +841,7 @@
                   <td>28</td>
                   <td>77.7%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -883,7 +883,7 @@
                   <td>10</td>
                   <td>66.6%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -925,7 +925,7 @@
                   <td>10</td>
                   <td>66.6%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -967,7 +967,7 @@
                   <td>10</td>
                   <td>66.6%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -1009,7 +1009,7 @@
                   <td>10</td>
                   <td>66.6%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -1051,7 +1051,7 @@
                   <td>22</td>
                   <td>50%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -1093,7 +1093,7 @@
                   <td>22</td>
                   <td>50%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -1135,7 +1135,7 @@
                   <td>22</td>
                   <td>50%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
@@ -1177,7 +1177,7 @@
                   <td>22</td>
                   <td>50%</td>
                   <td>
-                    <div class="buttons has-addons">
+                    <div class="field has-addons">
                       <div
                         class="button is-small is-info is-light modal-button"
                         data-target="settings-modal"
