Change source structure

--- a/index.html
+++ b/index.html
@@ -1380,7 +1380,6 @@
       </div>
     </div>
     <!-- Scripts -->
-    <script type="text/javascript" src="js/scripts.js"></script>
-    <script type="text/javascript" src="js/modal-fx.js"></script>
+    <script type="text/javascript" src="js/scripts.min.js"></script>
   </body>
 </html>
