Remove trash tags

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="tile is-parent is-6">
               <div class="tile is-child box has-text-centered">
                 <span class="icon tile-icon">
-                  <i class="fa-regular fa-copyright fa-3x"></i></i>
+                  <i class="fa-regular fa-copyright fa-3x"></i>
                 </span>
                 <p class="title">Edit your brand</p>
                 <p class="subtitle">tell us about you</p>
